# tuim

./: .gitignore  CLAUDE.md  Dockerfile.build  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  trelay.spec  tuim.spec
.github/workflows/: release.yml
assets/: IMAGES_NEEDED.md
config/: connections.example.yaml
scripts/: build-linux-amd64.sh  build.sh  docker-build.sh
src/trelay/: __init__.py  __main__.py  app.py  config.py  i18n.py  models.py
src/trelay/assets/: __init__.py  example_connections.yaml
src/trelay/protocols/: base.py  k8s.py  rdp.py  ssh.py  telnet.py  vnc.py
src/trelay/screens/: add_connection.py  delete_confirm.py  help_screen.py  k8s_help_screen.py  k8s_picker.py  main_screen.py  shell_picker.py
src/trelay/services/: health_checker.py  k8s_service.py  session_manager.py
src/trelay/styles/: theme.tcss
src/trelay/widgets/: __init__.py  command_bar.py  connection_table.py  header_bar.py  k8s_resource_view.py  protocol_badge.py  status_bar.py  terminal_view.py
src/tuim/: __init__.py  __main__.py  app.py  config.py  i18n.py  models.py
src/tuim/assets/: __init__.py  example_connections.yaml
src/tuim/protocols/: base.py  k8s.py  rdp.py  ssh.py  telnet.py  vnc.py
src/tuim/screens/: add_connection.py  delete_confirm.py  file_transfer_screen.py  help_screen.py  k8s_help_screen.py  k8s_picker.py  main_screen.py  mkdir_screen.py  shell_picker.py  transfer_confirm.py
src/tuim/services/: health_checker.py  k8s_service.py  (+2 more)
tests/: conftest.py  test_config.py  test_models.py
tests/test_protocols/: test_base.py
(+10 files in other folders)
